--- a/index.html
+++ b/index.html
@@ -167,18 +167,17 @@
             <el-card shadow="always">
               <div slot="header" class="clearfix">
                 <span>剖分索引大表</span>
-                <el-button style="float: right; padding: 3px 0" type="text" @click="closeOneMenu()" icon="el-icon-close"></el-button>
+                <el-button style="float: right; padding: 3px 0;" type="text" @click="closeOneMenu()" icon="el-icon-close"></el-button>
+                <el-button size="mini" style="float:right;margin-right:20px" @click="createCode()">编码生成</el-button>
               </div>
-              <el-table v-loading="tableLoading" :data="tableData" height="250" style="width: 100%" row-style="height:0" cell-style="padding:0">
-                <el-scrollbar style="height:100%">
+              <el-table v-loading="tableLoading" :element-loading-text="tableLoadingText" :data="tableData" height="250" style="width: 100%" row-style="height:0" cell-style="padding:0">
                   <el-table-column
                           prop="id"
                           label="编号"
                           align="center">
                   </el-table-column>
-
                   <el-table-column
-                          prop="code"
+                          :prop="codeColName"
                           label="GLN位置扩展编码"
                           width="300"
                           align="center">
@@ -186,7 +185,7 @@
                   <el-table-column
                           prop="GLN"
                           label="GLN"
-                          width="125"
+                          width="150"
                           align="center">
                   </el-table-column>
                   <el-table-column
@@ -243,7 +242,6 @@
                           width="180"
                           align="center">
                   </el-table-column>
-                </el-scrollbar>
               </el-table>
 
             </el-card>
