--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         background-color="#545c64" text-color="#fff" active-text-color="#ffd04b">
         <el-submenu index="1">
           <template slot="title">数据整合</template>
-          <el-menu-item index="1-1" @click="codeGet">加载数据</el-menu-item>
-          <el-menu-item index="1-2" @click="codeGet">编码生成</el-menu-item>
+          <el-menu-item index="1-1">加载数据</el-menu-item>
+          <el-menu-item index="1-2" >编码生成</el-menu-item>
           <el-menu-item index="1-3">编码解码</el-menu-item>
         </el-submenu>
         <el-submenu index="2">
@@ -174,12 +174,13 @@
                   <el-table-column
                           prop="id"
                           label="编号"
+                          width="50"
                           align="center">
                   </el-table-column>
                   <el-table-column
-                          :prop="codeColName"
+                          :prop="codeCol"
                           label="GLN位置扩展编码"
-                          width="300"
+                          width="200"
                           align="center">
                   </el-table-column>
                   <el-table-column
@@ -189,64 +190,62 @@
                           align="center">
                   </el-table-column>
                   <el-table-column
-                          prop="newGLN"
+                          :prop="newGLN"
                           label="新型GLN码"
-                          width="200"
+                          width="350"
                           align="center">
                   </el-table-column>
                   <el-table-column
                           prop="type"
                           label="位置类型"
-                          width="100"
+                          width="80"
                           align="center">
                   </el-table-column>
                   <el-table-column
                           prop="name"
                           label="参与方名称"
-                          width="100"
+                          width="200"
                           align="center">
                   </el-table-column>
                   <el-table-column
                           prop="address"
                           label="邮政地址"
-                          width="280"
+                          width="300"
                           align="center">
                   </el-table-column>
                   <el-table-column
                           prop="Contact"
                           label="联系人"
-                          width="180"
+                          width="150"
                           align="center">
                   </el-table-column>
                   <el-table-column
                           prop="DateTime"
                           label="申请时间"
-                          width="180"
+                          width="150"
                           align="center">
                   </el-table-column>
                   <el-table-column
                           prop="LON"
                           label="经度"
-                          width="180"
+                          width="150"
                           align="center">
                   </el-table-column>
                   <el-table-column
                           prop="LAT"
                           label="纬度"
-                          width="180"
+                          width="150"
                           align="center">
                   </el-table-column>
                   <el-table-column
                           prop="HEI"
                           label="高度"
-                          width="180"
+                          width="150"
                           align="center">
                   </el-table-column>
               </el-table>
-
             </el-card>
           </div>
-
         </transition>
       </div>
 
